ensure link covers icons

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -830,7 +830,7 @@ body {
                 tbody {
                   tr {
                     transform: translateY(0);
-                    a {bottom:0; left:0; position:absolute; right:0; top:0;}
+                    a {bottom:0; left:0; position:absolute; right:0; top:0; z-index: 5;}
                     &:hover {
                       background: linear-gradient(90deg, $rowHoverStart 0%, $rowHoverEnd 20%, $rowHoverEnd 80%, $rowHoverStart 100%);
                     }
